<resources>
    <string name="app_name">MRASYIDRIDHOTOBING_1202150064_MODUL6</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comment">Comment</string>
    <string name="komentator">Komentator</string>
    <string name="uploader">Uploader</string>
    <string name="judul_gambar">Judul Gambar</string>
    <string name="deskripsi_gambar">Deskripsi gambar</string>
    <string name="write_comment_here">Write comment here</string>
    <string name="post">Post</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="title">Title</string>
    <string name="write_your_post">Write your post</string>
    <string name="deskripsi">DESKRIPSI</string>
    <string name="judul">Judul</string>
    <string name="pengupload">Pengupload</string>
    <string name="signout">Signout</string>
</resources>
