<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:padding="5dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:id="@+id/postpengupload"
            android:text="@string/pengupload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/postgambarnya"
            android:src="@drawable/image"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:id="@+id/postjudul"
            android:text="@string/judul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:id="@+id/postdeskripsi"
            android:text="@string/deskripsi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</android.support.v7.widget.CardView>